Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-52370

[BP 7.1.2 MB-51909] - Incorrect query param encoding for curl binding and path param is not encoded

    XMLWordPrintable

Details

    • 1
    • Unknown
    • Medium

    Description

      • While encoding URL query params, current curl binding implementation encodes the standard delimiters: '?', '&'.
      • The path param is not encoded. For example the following request,

      var request = {
              headers: {
                  'Host': 'iam.amazonaws.com',
              },
              method: 'GET',
              host: 'iam.amazonaws.com',
              path: '/documents and search/buy/',
              params:'Action=GetUser&UserName=nawazish.khan@couchbase.com&Version=2010-05-08'
          };
      

      Results in the following target URL:

      https://iam.amazonaws.com/documents and search/buy/?Action=GetUser&UserName=nawazish.khan%40couchbase.com&Version=2010-05-08
      

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-52370
          # Subject Branch Project Status CR V

          Activity

            People

              sujay.gad Sujay Gad
              jeelan.poola Jeelan Poola
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty