MB-52370: Fix URL encoding for CURL bindings

In the current CURL binding implementation, the path params were not URL encoded.
And the query params employed generic URL encoding scheme, meaning, every non-ASCII
character was URL encoded including the standard '=' and '&' characters. This patch
fixes these defects.

Change-Id: Ie5d778daeb32540e2d54b3143fbb439f44acd3ae
Reviewed-on: https://review.couchbase.org/c/eventing/+/175487
Reviewed-by: abhishekjindal <abhishek.jindal@couchbase.com>
Reviewed-by: CI Bot
Tested-by: Mohammad Nawazish Khan <nawazish.khan@couchbase.com>
(cherry picked from commit ad445a2e72eecad65cfbf7cf3b92d53eba495531)
Reviewed-on: https://review.couchbase.org/c/eventing/+/175989
Well-Formed: Restriction Checker
Reviewed-by: <ankit.prabhu@couchbase.com>